force-app/main/default/objects/Item_da_Transfer_ncia_de_Estoque__c/Item_da_Transfer_ncia_de_Estoque__c.object-meta.xml
<CustomObject>
    <label>Item da Transferência de Estoque</label>
    <nameField>
        <displayFormat>ITE={0000}</displayFormat>
        <label>Nome de Item da Transferência de Estoque</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da Transferência de Estoque</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>