force-app/main/default/objects/Item_da_Transfer_ncia_de_Estoque__c/fields/codigo_produto__c.field-meta.xml
<CustomField>
    <fullName>codigo_produto__c</fullName>
    <formula>Produto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do produto</label>
    <type>Text</type>
</CustomField>