force-app/main/default/objects/Item_da_Transfer_ncia_de_Estoque__c/fields/Entrada_de_Estoque__c.field-meta.xml
<CustomField>
    <fullName>Entrada_de_Estoque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrada de Estoque</label>
    <referenceTo>Entrada_de_Estoque__c</referenceTo>
    <relationshipLabel>Itens da Transferência de Estoque</relationshipLabel>
    <relationshipName>Itens_da_Transfer_ncia_de_Estoque</relationshipName>
    <type>Lookup</type>
</CustomField>