force-app/main/default/objects/Item_da_Transfer_ncia_de_Estoque__c/fields/Estoque_de_origem__c.field-meta.xml
<CustomField>
    <fullName>Estoque_de_origem__c</fullName>
    <label>Estoque de origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estoques</valueSetName>
    </valueSet>
</CustomField>