force-app/main/default/objects/Item_da_Transfer_ncia_de_Estoque__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da Transferência de Estoque</relationshipLabel>
    <relationshipName>Itens_da_Transfer_ncia_de_Estoque</relationshipName>
    <type>Lookup</type>
</CustomField>