force-app/main/default/objects/Item_da_Transfer_ncia_de_Estoque__c/fields/Solicita_o_de_Transfer_ncia_de_Estoque__c.field-meta.xml
<CustomField>
    <fullName>Solicita_o_de_Transfer_ncia_de_Estoque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitação de Transferência de Estoque</label>
    <referenceTo>Solicitacao_transferencia_estoque__c</referenceTo>
    <relationshipLabel>Itens da Transferência de Estoque</relationshipLabel>
    <relationshipName>Itens_da_Transfer_ncia_de_Estoque</relationshipName>
    <type>Lookup</type>
</CustomField>